# rare-disease-agent

./: .env.example  .gitignore  Dockerfile  README.md  Ready_0423.md  TBD_0423.md  agent.py  app.py  docker-compose.yml  external_db.py  llm.py  main.py  prompts.py  pyproject.toml  rag.py  result_case.md  schemas.py
data/corpus/: acmg_genes.jsonl  diseases.jsonl
data/samples/: P002.json  P002_single_Exomiser.results.variants.tsv  P005.json  P1.json  input_schema_example.json  mock_case.json
scripts/: download_model.py  prepare_corpus.py  start_vllm.sh  structure_report_from_output.py
tests/: test_external_db.py  test_schemas.py
