[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rare-disease-agent"
version = "0.1.0"
description = "LLM-based rare disease diagnosis assistant (offline Docker, small model)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "httpx>=0.25",
    "streamlit>=1.30",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[tool.setuptools]
py-modules = [
    "agent",
    "app",
    "external_db",
    "llm",
    "main",
    "prompts",
    "rag",
    "schemas",
]
